--- a/emp/index.html
+++ b/emp/index.html
@@ -1,4 +1,4 @@
-<form id="uploadForm" enctype="multipart/form-data" action="upload" method="post">
+<form id="uploadForm" enctype="multipart/form-data" action="emp/upload" method="post">
      <input type="file" name="file" />Upload
      <input type="submit" value="Upload" name="submit">
 </form>
